--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
+    "electron-simple-publisher": "git://github.com/apezel/electron-simple-publisher.git#master",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.15.1",
     "ember-cli-dependency-checker": "^2.0.0",
