--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@types/express": "^4.0.37",
     "@types/puppeteer": "^0.10.2",
-    "electron-simple-publisher": "git://github.com/apezel/electron-simple-publisher.git#master",
+    "electron-simple-publisher": "github:apezel/electron-simple-publisher",
     "ember-cli-babel": "^6.3.0",
     "express": "^4.15.5",
     "puppeteer": "^0.11.0"
